--- a/.github/workflows/duild.yml
+++ b/.github/workflows/duild.yml
@@ -2,7 +2,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -11,29 +11,26 @@ jobs:
       contents: read
       packages: write
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 16
-      uses: actions/setup-java@v3
-      with:
-        java-version: '16'
-        distribution: 'adopt'
-        cache: gradle
-    - name: Add Gradle Wrapper for strating Gradlew
-      run: gradle wrapper
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: set global env
-      id: global_env
-      run: |
-        echo "::set-output name=IMAGE_NAME::save"
-        echo "::set-output name=DOCKERHUB_IMAGE_NAME::docker.pkg.github.com/dschek/save/save"
-    - name: Build and tag image
-      run: |
-        docker build -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:latest" -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:${GITHUB_SHA::8}" .
-    - name: Docker login
-      run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
-    - name: Publish image
-      env:
-        IMAGE_NAME: save
-      run: docker push "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}"
-
+      - name: set global env
+        id: pr
+        run: echo "::set-output name=NAME::cdnsave"
+      - uses: actions/checkout@v3
+      - name: Set up JDK 16
+        uses: actions/setup-java@v3
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+          cache: gradle
+      - name: Add Gradle Wrapper for strating Gradlew
+        run: gradle wrapper
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: set global env
+        id: global_env
+        run: echo "::set-output name=DOCKERHUB_IMAGE_NAME::docker.pkg.github.com/dschek/${{ steps.pr.outputs.NAME}}/${{ steps.pr.outputs.NAME}}"
+      - name: Build and tag image
+        run: docker build -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:latest" -t "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}:${GITHUB_SHA::8}" .
+      - name: Docker login
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p ${{secrets.GITHUB_TOKEN}}
+      - name: Publish image
+        run: docker push "${{ steps.global_env.outputs.DOCKERHUB_IMAGE_NAME }}"
