--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     image: "docker.pkg.github.com/dschek/save/save:latest"
     ports:
       - "9302:8080"
+    networks:
+      - cdnsave
