--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ version: '3.8'
 services:
   web:
     container_name: cdnsave
-    image: "docker.pkg.github.com/dschek/save/save:latest"
+    image: "docker.pkg.github.com/dschek/sdnsave/cdnsave:latest"
     ports:
       - "9302:8080"
-    networks:
-      - cdnsave
