--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,14 @@ group = 'com.cdn'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '16'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
+    jcenter()
     mavenCentral()
 }
 
@@ -16,8 +23,4 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
