migrate to java version 20

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.2'
-    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
     id 'java'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.cdn'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '16'
+sourceCompatibility = '20'
+
+jar {
+    archiveFileName = "app.jar"
+}
 
 configurations {
     compileOnly {
@@ -15,12 +19,17 @@ configurations {
 }
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
 dependencies {
+    implementation 'commons-net:commons-net:3.9.0'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
