--- a/.github/workflows/duild.yml
+++ b/.github/workflows/duild.yml
@@ -15,11 +15,11 @@ jobs:
         id: pr
         run: echo "::set-output name=NAME::cdnsave"
       - uses: actions/checkout@v3
-      - name: Set up JDK 16
+      - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
-          java-version: '16'
-          distribution: 'adopt'
+          java-version: '20'
+          distribution: 'temurin'
           cache: gradle
       - name: Add Gradle Wrapper for strating Gradlew
         run: gradle wrapper
