--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,12 @@ configurations {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    implementation 'commons-net:commons-net:3.9.0'
+    implementation 'commons-net:commons-net'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
